--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "firebase": "^7.6.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
