--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
     "@nuxt/typescript-build": "^0.5.5",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/vuetify": "^1.0.0",
     "babel-eslint": "^10.0.1",
+    "core-js": "2.6.11",
     "eslint": "^6.1.0",
     "eslint-plugin-nuxt": ">=0.4.2"
   }
