--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "2.6.11",
     "firebase": "^7.6.2",
     "nuxt": "^2.0.0",
+    "vue-currency-filter": "^4.0.3",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.4"
   },
