--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "core-js": "2.6.11",
     "firebase": "^7.6.2",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "vue-currency-filter": "^4.0.3",
     "vue-the-mask": "^0.11.1",
